Prevent wrapping nav links

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -773,6 +773,7 @@ button {
 }
 
 .main-nav {
+    white-space: nowrap;
 	li {
 		margin: 0;
 		line-height: 1.2em;
